@@ -52,21 +52,7 @@ public abstract class CmdTDB extends CmdARQ
     protected Model getModel()
     {
         if ( graphName != null )
-        {
-            // Workaround for bug in ARQ 2.6.0 and earlier.
-            // Remove at jump to ARQ 2.7.0
-//            if ( ! tdbDatasetAssembler.getDataset().containsNamedModel(graphName) )
-//            {
-//                getDataset()
-//                
-//                TDBFactory.createGraph(graphName)
-//            }
-            
-            
             return tdbDatasetAssembler.getDataset().getNamedModel(graphName) ;
-            
-        }
-            
         else
             return tdbDatasetAssembler.getDataset().getDefaultModel() ;
     }
